--- a/event/config/locales/ems.en.yml
+++ b/event/config/locales/ems.en.yml
@@ -1,2 +1,15 @@
 en:
   ems:
+    registration_subtitle: Registration
+    register_btn: Register
+    cancel_btn: Cancel
+    ticket_receipt_arrival: Arrival
+    ticket_receipt_attendee: Attendee
+    ticket_receipt_departure: Departure
+    ticket_receipt_event: Event
+    ticket_receipt_questions: "If you have any questions regarding the event, please email %{value}"
+    ticket_receipt_questions_telephone: "or telephone %{value}"
+    ticket_receipt_thank_you: Thank you
+    ticket_receipt_ticket_number: Ticket Number
+    registration_receipt_title: Reservation Receipt
+    
