--- a/event/config/locales/ems.en.yml
+++ b/event/config/locales/ems.en.yml
@@ -11,5 +11,6 @@ en:
     ticket_receipt_questions_telephone: "or telephone %{value}"
     ticket_receipt_thank_you: Thank you
     ticket_receipt_ticket_number: Ticket Number
+    ticket_receipt_price: Price
     registration_receipt_title: Reservation Receipt
     
