--- a/event/config/locales/ems.en.yml
+++ b/event/config/locales/ems.en.yml
@@ -13,4 +13,4 @@ en:
     ticket_receipt_ticket_number: Ticket Number
     ticket_receipt_price: Price
     registration_receipt_title: Reservation Receipt
-    
+    ticket_informaton: Ticket Information
