--- a/event/config/locales/ems.de.yml
+++ b/event/config/locales/ems.de.yml
@@ -13,4 +13,4 @@ de:
     ticket_receipt_ticket_number: Ticketnummer
     ticket_receipt_price: Preis
     registration_receipt_title: Anmeldebestätigung
-    
+    ticket_information: Ticket-Informationen
