--- a/forum/config/locales/fms.en.yml
+++ b/forum/config/locales/fms.en.yml
@@ -95,3 +95,6 @@ en:
     views: views
     last_post_on: "Last post by %{user} :: %{date}"
     comments_header: Comments
+    no_topics: Be the first to create a topic
+    no_monitored_topics: There are currently no topics being monitored
+    no_forums: The Forum section will be available soon
