--- a/event/config/locales/ems.de.yml
+++ b/event/config/locales/ems.de.yml
@@ -15,7 +15,6 @@ de:
     ticket_information: Ticket-Informationen
     ticket_contact: Kontakt-Informationen
     registration_receipt_title: Anmeldebestätigung
-    registration_payment_required: Bitte wählen Sie eine Zahlungsmethode
     registration_email: E-Mail
     registration_first_name: Vorname
     registration_last_name: Nachname
@@ -26,3 +25,10 @@ de:
     registration_country: Land
     registration_zipcode: Postleitzahl
     registration_account_required: 'Um für diese Veranstaltung zu registrieren, müssen Sie in Ihrem Benutzerkonto angemeldet sein.'
+  activerecord:
+    errors:
+      models:
+        registration:
+          attributes:
+            workshop_price_id:
+              blank: Bitte wählen Sie eine Zahlungsmethod
