moved pagination helper to this gem

--- a/config/locales/custom.cs.yml
+++ b/config/locales/custom.cs.yml
@@ -16,3 +16,7 @@ cs:
       wwmmdd: "%a, %b %d"
       wwmmddyy: "%a, %b %d, %Y"
       hhmmpp: "%I:%M %p"
+
+  core:
+    next_page: "Next <i class='icon-angle-right'></i>"
+    prev_page: "<i class='icon-angle-left'></i> Previous"
