--- a/config/locales/custom.en.yml
+++ b/config/locales/custom.en.yml
@@ -18,3 +18,8 @@ en:
       hhmmpp: "%I:%M %p"
 
   english: "English"
+  
+  core:
+    next_page: "Next <i class='icon-angle-right'></i>"
+    prev_page: "<i class='icon-angle-left'></i> Previous"
+    
