--- a/config/locales/custom.ja.yml
+++ b/config/locales/custom.ja.yml
@@ -16,3 +16,7 @@ ja:
       wwmmdd: "%a, %b %d"
       wwmmddyy: "%a, %b %d, %Y"
       hhmmpp: "%H:%M"
+
+  core:
+    next_page: "Next <i class='icon-angle-right'></i>"
+    prev_page: "<i class='icon-angle-left'></i> Previous"
