further blog enhancements

--- a/cms/config/locales/cms.de.yml
+++ b/cms/config/locales/cms.de.yml
@@ -1,3 +1,6 @@
 de:
   cms:
     recent_posts: Aktuelle Beiträge
+    all_recent_psots: Alle Aktuelle Beiträge
+    available_blogs: Erhältlich Blogs
+    
