redirect back to original page after login

--- a/config/locales/custom.cs.yml
+++ b/config/locales/custom.cs.yml
@@ -18,5 +18,5 @@ cs:
       hhmmpp: "%I:%M %p"
 
   core:
-    next_page: "Next <i class='icon-angle-right'></i>"
-    prev_page: "<i class='icon-angle-left'></i> Previous"
+    next_page: "Další <i class='icon-angle-right'></i>"
+    prev_page: "<i class='icon-angle-left'></i> Předchozí"
