--- a/cms/config/locales/cms.cs.yml
+++ b/cms/config/locales/cms.cs.yml
@@ -1,6 +1,6 @@
 cs:
   cms:
-    recent_posts: Recent Posts
-    all_recent_psots: All Recent Posts
-    available_blogs: Available Blogs
+    recent_posts: Nejnovější příspěvky
+    all_recent_posts: Všechny nedávné příspěvky
+    available_blogs: Dostupné blogy
     
