--- a/forum/config/locales/fms.de.yml
+++ b/forum/config/locales/fms.de.yml
@@ -40,13 +40,13 @@ de:
     forums: Forums
     page_nr: 'page %{nr}'
     views_forums:
-      recent_activity: Recent activity
-      no_recent_activity: No recent activity
-      comma_locked_topic: "This topic is locked."
-      unmoderated_html: 'This forum is currently unmoderated.<br />Please always be courteous.'
-    recent_posts: Recent Posts
-    searching_for: Searching for
-    by_user: 'by %{user}'
+      recent_activity: Neueste Aktivität
+      no_recent_activity: Keine neuen Aktivitäten
+      comma_locked_topic: "Dieses Thema ist gesperrt."
+      unmoderated_html: 'Dieses Forum ist derzeit nicht moderiert.<br />Bitte immer höflich sein.'
+    recent_posts: Aktuelle Beiträge
+    searching_for: Auf der Suche nach
+    by_user: 'von %{user}'
     in_forum: 'in %{forum}'
     views_posts:
       formatting_help: Formatieren Hilfe
@@ -59,39 +59,39 @@ de:
       formatting_list: '* <span>or</span> 1. <span>(lists)</span>'
       save: 'Save post'
     topic: Topic
-    locked: Locked
-    or: or
-    cancel: cancel
+    locked: Verschlossen
+    or: oder
+    cancel: stornieren
     reply: Antworten
     admin:
       edit_post: Beitrag editieren
-    suspended_user_post: This post has been removed
+    suspended_user_post: Dieser Beitrag wurde bereits entfernt
     reply_to_topic: Dein Kommentar
     views_topics:
       topic: Titel
       body: Inhalt
-      delete_sure: 'Delete this topic forever?'
-      locked_topic: 'This topic is locked.'
+      delete_sure: 'Lösche dieses Thema immer?'
+      locked_topic: 'Dieses Thema ist gesperrt.'
       save_reply: Antworten
       cancel: Abbrechen
       lock_topic: Thema schließen
     sticky: Sticky
-    edit_topic: Edit topic
+    edit_topic: Thema bearbeiten
     post_topic: Thema veröffentlichen
     new_topic: Neues Thema
     voices: Voices
-    edit: edit
-    delete: delete
+    edit: bearbeiten
+    delete: löschen
     all: Alle Themen
     monitored: Bereits besuchte Themen
     started: Begonnen von
-    comment_age: "%{when} ago"
-    by_user_html: "by %{user}"
+    comment_age: "%{when} vor"
+    by_user_html: "von %{user}"
     moderator: Moderator
     replies: Beiträge
     views: Aufrufe
     last_post_on: "Letzter Eintrag von %{user} :: %{date}"
     comments_header: Kommentare
-    no_topics: 'Seien Sie der Erste, der ein Thema erstellen'
+    no_topics: 'Sie der Erste, der ein Thema erstellt'
     no_monitored_topics: 'Es liegen noch keine Themen zu überwachenden'
     no_forums: Das Forum Abschnitt wird in Kürze verfügbar
