--- a/event/config/locales/ems.cs.yml
+++ b/event/config/locales/ems.cs.yml
@@ -1,19 +1,19 @@
 cs:
   ems:
-    registration_subtitle: Registration
-    register_btn: Register
-    cancel_btn: Cancel
+    registration_subtitle: Registrace
+    register_btn: Registrovat
+    cancel_btn: Zrušit
     ticket_receipt_arrival: Příjezd
     ticket_receipt_attendee: Účastník
     ticket_receipt_departure: Odjezd
     ticket_receipt_event: Událost
-    ticket_receipt_questions: Pokud máte ohledně události nějaké otázky, pošlete nám, prosím, e-mail %{value}
-    ticket_receipt_questions_telephone: nebo zatelefonujte %{value}
+    ticket_receipt_questions: "Pokud máte ohledně události nějaké otázky, pošlete nám, prosím, e-mail %{value}"
+    ticket_receipt_questions_telephone: "nebo zatelefonujte %{value}"
     ticket_receipt_thank_you: Děkujeme
     ticket_receipt_ticket_number: Číslo lístku
-    ticket_receipt_price: Price
-    ticket_informaton: Ticket Information
-    ticket_contact: Contact Information
+    ticket_receipt_price: Cena
+    ticket_informaton: Informace o lístku
+    ticket_contact: Kontaktní informace
     registration_receipt_title: Potvrzení o rezervaci
     registration_email: E-mail
     registration_first_name: Křestní jméno
@@ -24,11 +24,11 @@ cs:
     registration_state: Stát/provincie/region
     registration_country: Země
     registration_zipcode: Poštovní směrovací číslo
-    registration_account_required: 'In order to register for this event, you must be logged into your user account.'
+    registration_account_required: 'Abyste se mohli zaregistrovat na tuto událost, musíte se přihlásit na svůj uživatelský účet.'
   activerecord:
     errors:
       models:
         registration:
           attributes:
             workshop_price_id:
-              blank: Please select a payment method
+              blank: Vyberte prosím způsob platby
