--- a/forum/config/locales/fms.de.yml
+++ b/forum/config/locales/fms.de.yml
@@ -92,6 +92,6 @@ de:
     views: Aufrufe
     last_post_on: "Letzter Eintrag von %{user} :: %{date}"
     comments_header: Kommentare
-    no_topics: 'Sie der Erste, der ein Thema erstellt'
+    no_topics: 'Sei der Erste, der ein Thema erstellt'
     no_monitored_topics: 'Es liegen noch keine Themen zu überwachenden'
     no_forums: Das Forum Abschnitt wird in Kürze verfügbar
