new url_xxx liquid tags

--- a/cms/config/locales/cms.de.yml
+++ b/cms/config/locales/cms.de.yml
@@ -2,5 +2,5 @@ de:
   cms:
     recent_posts: Aktuelle Beiträge
     all_recent_psots: Alle Aktuelle Beiträge
-    available_blogs: Erhältlich Blogs
+    available_blogs: Verfügbare Blogs
     
