--- a/core/config/locales/custom.en.yml
+++ b/core/config/locales/custom.en.yml
@@ -22,4 +22,6 @@ en:
   core:
     next_page: "Next <i class='icon-angle-right'></i>"
     prev_page: "<i class='icon-angle-left'></i> Previous"
+    login: Login
+    logout: Logout
     
