update some translations

--- a/cms/config/locales/cms.cs.yml
+++ b/cms/config/locales/cms.cs.yml
@@ -3,4 +3,6 @@ cs:
     recent_posts: Nejnovější příspěvky
     all_recent_posts: Všechny nedávné příspěvky
     available_blogs: Dostupné blogy
-    
+    blog_header: Blogs
+    read_more: 'Čtěte více...'
+    blog_summary_date: Datum
