--- a/cms/config/locales/cms.de.yml
+++ b/cms/config/locales/cms.de.yml
@@ -6,3 +6,5 @@ de:
     blog_header: Blogs
     read_more: 'Weiterlesen...'
     blog_summary_date: Datum
+    blog_notify_new_post: Ein neuer Beitrag wurde in diesem Blog veröffentlicht
+    blog_notify_read_post: Lies hier den kompletten Beitrag
