--- a/cms/config/locales/cms.de.yml
+++ b/cms/config/locales/cms.de.yml
@@ -8,3 +8,7 @@ de:
     blog_summary_date: Datum
     blog_notify_new_post: Es gibt einen neuen Beitrag im Blog
     blog_notify_read_post: Lies hier den kompletten Beitrag
+    reply: Antworten
+    suspended_user_post: Dieser Beitrag wurde bereits entfernt
+    comment_body: Inhalt
+    add_comment: Dein Kommentar
