--- a/cms/config/locales/cms.en.yml
+++ b/cms/config/locales/cms.en.yml
@@ -6,10 +6,13 @@ en:
     blog_header: Blogs
     read_more: 'Read More...'
     blog_summary_date: Date
+    blog_summary_comments: Comments
     blog_notify_new_post: There is a new post in the blog
     blog_notify_read_post: Read full post
     reply: Reply
     suspended_user_post: This post has been removed
     comment_body: Body
+    comment_submit: Submit Comment
     add_comment: Add a Comment
-    
+    comments_header: Comments
+    delete: delete
