--- a/cms/config/locales/cms.cs.yml
+++ b/cms/config/locales/cms.cs.yml
@@ -6,9 +6,13 @@ cs:
     blog_header: Blogs
     read_more: 'Čtěte více...'
     blog_summary_date: Datum
+    blog_summary_comments: Komentáře
     blog_notify_new_post: K dispozici je nový příspěvek v blogu
     blog_notify_read_post: Přečtěte si celý příspěvek
     reply: Odpovědět
     suspended_user_post: Tento příspěvek byl odstraněn
     comment_body: Text příspěvku
+    comment_submit: Odeslat komentář
     add_comment: Přidat komentář
+    comments_header: Komentáře
+    delete: smazat
