--- a/event/config/locales/ems.cs.yml
+++ b/event/config/locales/ems.cs.yml
@@ -25,6 +25,9 @@ cs:
     registration_country: Země
     registration_zipcode: Poštovní směrovací číslo
     registration_account_required: 'Abyste se mohli zaregistrovat na tuto událost, musíte se přihlásit na svůj uživatelský účet.'
+    registration_closed_heading: Registrace Zavřeno
+    registration_closed_text: "Jsme již přijímá registrace na kurz %{value}"
+    registration_closed_list: Následující kurzy jsou v současné době otevřen pro registraci
   activerecord:
     errors:
       models:
