--- a/event/config/locales/ems.ja.yml
+++ b/event/config/locales/ems.ja.yml
@@ -25,6 +25,9 @@ ja:
     registration_country: 国名
     registration_zipcode: 郵便番号
     registration_account_required: 'In order to register for this event, you must be logged into your user account.'
+    registration_closed_heading: Registration Closed
+    registration_closed_text: "We are no longer accepting registrations for the course %{value}"
+    registration_closed_list: The following courses are currently open for registration
   activerecord:
     errors:
       models:
