--- a/event/config/locales/ems.cs.yml
+++ b/event/config/locales/ems.cs.yml
@@ -26,7 +26,8 @@ cs:
     registration_zipcode: Poštovní směrovací číslo
     registration_account_required: 'Abyste se mohli zaregistrovat na tuto událost, musíte se přihlásit na svůj uživatelský účet.'
     registration_closed_heading: Registrace Zavřeno
-    registration_closed_text: "Jsme již přijímá registrace na kurz %{value}"
+    registration_closed_text: "Jsme již přijímá registrace na kurz '%{title}'"
+    registration_closed_email: "V případě jakýchkoliv dotazů se můžete obrátit na %{email}."
     registration_closed_list: Následující kurzy jsou v současné době otevřen pro registraci
   activerecord:
     errors:
