--- a/event/config/locales/ems.cs.yml
+++ b/event/config/locales/ems.cs.yml
@@ -12,14 +12,14 @@ cs:
     ticket_receipt_thank_you: Děkujeme
     ticket_receipt_ticket_number: Číslo lístku
     ticket_receipt_price: Cena
-    ticket_informaton: Informace o lístku
+    ticket_information: Informace o lístku
     ticket_contact: Kontaktní informace
     registration_receipt_title: Potvrzení o rezervaci
     registration_email: E-mail
     registration_first_name: Křestní jméno
     registration_last_name: Příjmení
-    registration_address: Adresa
-    registration_address2: Adresa
+    registration_address: Ulice a číslo
+    registration_address2: Ulice a číslo
     registration_city: Město
     registration_state: Stát/provincie/region
     registration_country: Země
