--- a/core/config/locales/custom.en.yml
+++ b/core/config/locales/custom.en.yml
@@ -24,4 +24,36 @@ en:
     prev_page: "<i class='icon-angle-left'></i> Previous"
     login: Login
     logout: Logout
-    
+    account: Account
+    errors_below: Please review the problems below
+
+    profile_email: Email
+    profile_password: Password
+    profile_password_confirmation: Password Confirmation
+    profile_current_password: Current Password
+    profile_first_name: First Name
+    profile_last_name: Last Name
+    profile_address: Address
+    profile_address2: Address
+    profile_city: City
+    profile_state: State
+    profile_country: Country
+    profile_zipcode: Zipcode
+    profile_public_name: Public Name
+    profile_update_btn: Update
+    profile_account_settings: Account Settings
+    profile_details_settings: 'Public / Private Profile'
+    profile_public_title: Public Profile
+    profile_public_explanation: 'The following information will be visible to other people, such as posts in the forum or comments in the blog.'
+    profile_private_title: Private Profile
+    profile_private_explanation: 'This information will be kept private and not shared with anyone.'
+    profile_account_title: "Update Email / Account Login"
+    profile_account_explanation: "Remember: next time you login, you will use your updated email address."
+    profile_account_password_title: Change Your Password
+    profile_account_password_current_title: Current Password
+    profile_account_password_current_explanation: Your current password is required to make any changes.
+    profile_profile_updated: Your profile has been updated
+    profile_email_confirmation: An email has been sent to the new email address - you must click on the confirmation link before you can login using the new email address
+    profile_password_updated: Your password has been updated
+    profile_email_needs_confirmation: 'Your email address has already been changed to'
+    profile_email_needs_confirmation_2: 'An email was sent to that address for confirmation.  If you did not receive the confirmation email, simply update the email again to re-send the confirmation.'
